# zappy

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  Doxyfile  Makefile  README.md  _actions_8cpp.html  _actions_8hpp.html  _actions_8hpp.js  _actions_8hpp_source.html  _animation_type_8hpp.html  _animation_type_8hpp.js  _animation_type_8hpp_source.html  _args_parser_8cpp.html  _args_parser_8hpp.html  _args_parser_8hpp.js  _args_parser_8hpp_source.html  _c_function_wrapper_8cpp.html  _c_function_wrapper_8cpp.js  _c_function_wrapper_8hpp.html  _c_function_wrapper_8hpp.js  _c_function_wrapper_8hpp_source.html  _cell_8cpp.html  _cell_8hpp.html  _cell_8hpp_source.html  _chrono_8hpp.html  _chrono_8hpp.js  _chrono_8hpp_source.html  _coms_8cpp.html  _coms_8hpp.html  _coms_8hpp.js  _coms_8hpp_source.html  _config_8hpp.html  _config_8hpp_source.html  _core_8cpp.html  _core_8hpp.html  _core_8hpp_source.html  _egg_8hpp.html  _egg_8hpp_source.html  (+676 more)
.github/workflows/: doxygen.yml
ai/: README.md  client.py  decisionTree.py  logger.py  main.py  server.py  utils.py  zappy_ai
doxygen/html/search/: all_0.js  all_10.js  all_13.js  all_19.js  all_2.js  all_4.js  all_5.js  all_6.js  all_9.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  classes_a.js  classes_b.js  defines_0.js  defines_2.js  defines_3.js  defines_6.js  defines_7.js  defines_b.js  defines_d.js  enums_0.js  enums_1.js  enums_2.js  (+56 more)
gui/: .gitignore  CMakeLists.txt  README.md  config.cfg
gui/assets/models/golem/: golem.mtl
gui/include/: Actions.hpp  AnimationType.hpp  ArgsParser.hpp  Camera.hpp  Cell.hpp  Chrono.hpp  Core.hpp  Egg.hpp  GraphicalFactory.hpp  Map.hpp  Message.h  Model.hpp  Parser.hpp  RayLibCamera.hpp  Scene.hpp  Team.hpp  Vector2i.hpp  Vector3f.hpp
gui/include/interface/: ICamera.hpp  ICell.hpp  IClock.hpp  IConfig.hpp  ICore.hpp  IGraphicalModule.hpp  IMap.hpp  INetwork.hpp  IParser.hpp  IPlayer.hpp  ITeam.hpp
gui/include/libs/: RayLib.hpp
gui/src/: Actions.cpp  ArgsParser.cpp  Cell.cpp  Core.cpp  GraphicalFactory.cpp  Main.cpp  Map.cpp  Parser.cpp
gui/src/coms/: Coms.cpp  Coms.hpp  Config.hpp  Egg.cpp  Egg.hpp  IPlayer.hpp  Network.cpp  Network.hpp  Player.cpp  Player.hpp
gui/src/libs/: RayLib.cpp
gui/src/utils/: CFunctionWrapper.cpp  CFunctionWrapper.hpp
search/: all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_3.js  all_7.js  all_8.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  classes_7.js  classes_9.js  classes_c.js  classes_d.js  classes_e.js  defines_1.js  defines_4.js  defines_5.js  defines_8.js  defines_9.js  defines_a.js  defines_c.js  enums_5.js  enums_9.js  enums_a.js  enumvalues_11.js  enumvalues_14.js  enumvalues_a.js  enumvalues_c.js  enumvalues_d.js  enumvalues_f.js  files_0.js  (+44 more)
server/: CMakeLists.txt  README.md
server/include/: command.h  connection.h  data.h  pos.h  secure.h  utils.h
server/include/com/: request.h  response.h  response_error.h  types.h
server/lib/: CMakeLists.txt
server/lib/buffer/: CMakeLists.txt  buffer.c  buffer.h  libbuffer.md  memory.c
server/lib/vector/: CMakeLists.txt  element.c  init.c  libvector.md  save.c  vector.h
server/src/: main.c
server/src/command/: command.c  command_map.c  execution.c  login.c  map.c
server/src/command/ai/: broadcast.c  connect_nbr.c  death.c  eject.c  fork.c  fork_pre_exec.c  forward.c  incantation.c  incantation_pre_exec.c  incantation_utils.c  inventory.c  left.c  look.c  right.c  set.c  take.c
server/src/command/gui/: bct.c  enw.c  mct.c  msz.c  pin.c  plv.c  pnw.c  ppo.c  sgt.c  sst.c  tna.c
server/src/command/server/: bct.c  ebo.c  edi.c  enw.c  pbc.c  pdi.c  pdr.c  pex.c  pfk.c  pgt.c  pic.c  pie.c  pin.c  plv.c  pnw.c  ppo.c  seg.c  sgt.c  smg.c
server/src/connection/: com.c  handler.c  request.c  response.c  utils.c
server/src/zappy/: arguments.c  event.c  game.c  hash_map.c  hub.c  hub_command.c  init.c  request.c  response.c  secure.c  signal.c  socket.c  win.c
server/src/zappy/utils/: egg.c  map.c  numbers.c  player.c  resource.c  string.c  team.c  timer.c
server/tests/: buffer.c  vector.c
